--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,19 +5,20 @@ spring:
   application:
     name: WarehouseManageBackend
 
-#  redis:
-#    host: 127.0.0.1
-#    port: 6379
-#    password: 123456
-#    database: 0
-#    timeout: 5000
+#    data:
+#      redis:
+#        host: 127.0.0.1
+#        port: 6379
+#        password: 123456
+#        database: 0
+#        timeout: 5000
 
-    datasource:
-      driver-class-name: com.mysql.cj.jdbc.Driver
-      name: 'warehouse'
-      url: jdbc:mysql://localhost:3306/warehouse?serverTimezone=GMT
-      username: 'root'
-      password: 'root'
+  datasource:
+    name: 'warehouse'
+    url: jdbc:mysql://localhost:3306/warehouse?serverTimezone=GMT
+    username: 'root'
+    password: 'root'
+    driver-class-name: com.mysql.jdbc.Driver
 
   jackson:
     date-format: yyyy-MM-dd HH:mm
@@ -26,16 +27,17 @@ spring:
   main:
     allow-circular-references: true
 
-logging:
-  level:
-    com.fishpro.log: debug
+
+#logging:
+#  level:
+#    com.fishpro.log: debug
 
 mybatis-plus:
   type-aliases-package: com.example.domain
-  mapper-locations: classpath:/mapper/*.xml
-  #  type-enums-package: com.example.enums
+  mapper-locations: classpath:/mappers/*.xml
 
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-#    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
 
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
