--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,13 +5,13 @@ spring:
   application:
     name: WarehouseManageBackend
 
-    data:
-      redis:
-        host: 127.0.0.1
-        port: 6379
-        password: 123456
-        database: 0
-        timeout: 5000
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+      password: "12345"
+      database: 0
+      timeout: 5000
 
   datasource:
     name: 'warehouse'
@@ -33,7 +33,7 @@ spring:
 #    com.fishpro.log: debug
 
 mybatis-plus:
-  type-aliases-package: com.example.domain
+  type-aliases-package: com.bjtu.domain
   mapper-locations: classpath:/mappers/*.xml
 
   configuration:
