--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,12 @@ spring:
     url: r2dbc:mysql://localhost:3306/house?serverTimezone=GMT
     username: 'root'
     password: '123456'
-    # ??R2DBC??
+    pool:
+      enabled: true
+      initial-size: 100
+      max-size: 200
+      max-idle-time: 30m
+      validation-query: SELECT 1
 
   jackson:
     date-format: yyyy-MM-dd HH:mm
